Fixed text-align/ float issues.

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,9 +1,11 @@
 #content {
+  display: block;
   align-items: center;
   font-family: "Bradley", cursive;
   margin-left: auto;
   margin-right: auto;
   width: 650px;
+  text-align: center;
 }
 
 #greeting-container {
@@ -71,6 +73,16 @@ p.comment {
   font-family: sans-serif;
 }
 
+ol {
+    text-align: left;
+}
+
+.h2 {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .h3 {
     font: white;
     font-family: "Bradley", cursive;
@@ -81,6 +93,8 @@ p.comment {
 }
 
 #comment-box {
+    text-align: left;
+    clear: both;
     color: rgb(7, 0, 0);
 }
 
@@ -97,8 +111,8 @@ svg#clouds {
 }
 
 div.gallery {
-  border: 1px solid #ccc;
   float: left;
+  border: 1px solid #ccc;
   margin: 5px;
   width: 180px;
 }
